Week 8/istio/app-service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-msv2
spec:
  type: LoadBalancer
  selector:
    app: flaskapp-msv2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5003
