Week 8/istio/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-ms
spec:
  type: LoadBalancer
  selector:
    app: flaskapp-ms
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
