Week 8/istio/time-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  selector:
    app: time-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
