Week 8/istio/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  selector:
    app: weather-service
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
