Week 8/istio/ingress-define.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: pranjal-flask-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp-ms
            port:
              name: http
