Week 8/istio/virtualservice-traffic-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp-ms
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: flaskapp-ms
        port:
          number: 80
      weight: 70
    - destination:
        host: flaskapp-msv2
        port:
          number: 80
      weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: time-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: time-service
        port:
          number: 5001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: weather-service
        port:
          number: 5002
